prettify ui a bit

--- a/index.html
+++ b/index.html
@@ -6,29 +6,29 @@
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>Document</title>
 </head>
-<body>
-	<h1>Shitify - make your text look like a shit easily</h1>
+<body style="overflow-x: hidden;">
+	<div style="text-align: center;">
+		<h1>Shitify - make your text look like a shit easily</h1>
+		<p>
+			<i>Переводчикам пиратских игр PlayStation One на русский - посвящается...</i>
+		</p>
 
-	<p>
-		<i>Переводчикам пиратских игр PlayStation One на русский - посвящается...</i>
-	</p>
-
-	input: <br>
-	<textarea id="input" cols="90" rows="10" autofocus>
+		INPUT: <br>
+		<textarea id="input" cols="90" rows="10" autofocus>
 нажми старт
 идет загрузка
 отдохни
-читаю карту памяти
+сохранение на карту памяти
 	</textarea>
 
-	<br><br>
+		<br><br> OUTPUT: <br>
+		<textarea id="output" readonly cols="90" rows="10"></textarea>
 
-	output: <br>
-	<textarea id="output" readonly cols="90" rows="10"></textarea>
+		<p>Note: currently this works with cyrillic symbols only.</p>
+	</div>
 
-	<p>Note: currently this works with cyrillic symbols only.</p>
-
-	<div style="position: absolute; bottom: 10px; width: 99%; text-align: center;">
+	<div style="position: absolute; bottom: 10px; width: 100%; text-align: center;">
+		Inspired by Vodka. <br>
 		Copyright © 2017 Shitify Inc.
 	</div>
 
