--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<div style="text-align: center;">
 		<h1>Shitify - make your text look like a shit easily</h1>
 		<p>
-			<i>Переводчикам пиратских игр PlayStation One на русский - посвящается...</i>
+			<i>Переводчикам пиратских игр на PlayStation One посвящается...</i>
 		</p>
 
 		INPUT: <br>
