--- a/index.html
+++ b/index.html
@@ -5,8 +5,17 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>Shitify</title>
+
+	<style>
+		body {
+			position: relative;
+			min-height: 600px;
+			height: 100vh;
+			overflow-x: hidden;
+		}
+	</style>
 </head>
-<body style="overflow-x: hidden;">
+<body>
 	<div style="text-align: center;">
 		<h1>Shitify - make your text look like a shit easily</h1>
 		<p>
@@ -27,7 +36,7 @@
 		<p>Note: currently this works with cyrillic symbols only.</p>
 	</div>
 
-	<div style="position: absolute; bottom: 10px; width: 100%; text-align: center;">
+	<div style="position: absolute; bottom: 30px; width: 100%; text-align: center;">
 		Inspired by Vodka. <br>
 		Copyright © 2017 Shitify Inc.
 	</div>
